# openscad_mcp

./: .gitignore  IDEA_MEMO.md  OPENSCAD_PROMPT.md  README.md  gemini-extension.json  pyproject.toml  run_export.py  run_render.py  test_mcp.py
src/openscad_mcp/: server.py
