[project]
name = "openscad-mcp"
version = "0.1.0"
description = "An MCP server to render OpenSCAD files to images and STLs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
openscad-mcp = "openscad_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openscad_mcp"]
